--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -23,14 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
+  horizontal_data_table: ^3.0.0
+  json_annotation: ^4.0.0
+  shared_preferences: ^2.0.5
+  dio: ^4.0.0
+  enum_to_string: ^2.0.1
+  provider: ^5.0.0
 
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^4.0.0
   flutter_test:
     sdk: flutter
 
