--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   dio: ^4.0.0
   enum_to_string: ^2.0.1
   provider: ^5.0.0
+  timeago: ^3.0.2
 
 dev_dependencies:
   build_runner: ^1.0.0
