--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   enum_to_string: ^2.0.1
   provider: ^5.0.0
   timeago: ^3.0.2
+  uuid: ^3.0.4
 
 dev_dependencies:
   build_runner: ^1.0.0
