--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^5.0.0
   timeago: ^3.0.2
   uuid: ^3.0.4
+  channel:
+    git: https://github.com/kleon1024/channel.git
 
 dev_dependencies:
   build_runner: ^1.0.0
