--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   timeago: ^3.0.2
   uuid: ^3.0.4
   flutter_screenutil: ^5.0.0
+  reorderables: ^0.4.1
   channel:
     git: https://github.com/kleon1024/channel.git
 
