--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -18,15 +18,16 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+3
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
   horizontal_data_table: ^3.0.0
-  json_annotation: ^4.0.0
+  json_annotation: ^4.1.0
   shared_preferences: ^2.0.5
   dio: ^4.0.0
   enum_to_string: ^2.0.1
@@ -36,12 +37,13 @@ dependencies:
   flutter_screenutil: ^5.0.0
   reorderables: ^0.4.1
   web_socket_channel: ^2.1.0
+  path: ^1.8.0
   channel:
     git: https://github.com/kleon1024/channel.git
 
 dev_dependencies:
-  build_runner: ^1.0.0
-  json_serializable: ^4.0.0
+  build_runner: ^2.0.0
+  json_serializable: any
   flutter_test:
     sdk: flutter
 
@@ -58,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/translations/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
