--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -23,7 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider: ^2.0.2
   sqflite: ^2.0.0+3
+  sqflite_common_ffi: ^2.0.0+1
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
   horizontal_data_table: ^3.0.0
