--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_datagrid: ^19.2.55-beta
   syncfusion_flutter_charts: ^19.2.51
+  simple_tooltip: ^1.0.0
+  bot_toast: ^4.0.1
+  clipboard: ^0.1.3
   path_provider: ^2.0.2
   sqflite: ^2.0.0+3
   sqflite_common_ffi: ^2.0.0+1
