--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   bot_toast: ^4.0.1
   clipboard: ^0.1.3
   path_provider: ^2.0.2
+  modal_bottom_sheet: ^2.0.0
+  awesome_dialog: ^2.1.0
   sqflite: ^2.0.0+3
   sqflite_common_ffi: ^2.0.0+1
   cupertino_icons: ^1.0.2
