--- a/h2o/pubspec.yaml
+++ b/h2o/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.1
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -47,6 +47,7 @@ dependencies:
   flutter_screenutil: ^5.0.0
   reorderables: ^0.4.1
   web_socket_channel: ^2.1.0
+  flutter_easyrefresh: ^2.2.1
   path: ^1.8.0
   channel:
     git: https://github.com/kleon1024/channel.git
